<resources>
    <string name="app_name">MovieBox</string>
    <string name="one_star">1 Star</string>
    <string name="two_stars">2 Stars</string>
    <string name="three_stars">3 Stars</string>
    <string name="four_stars">4 Stars</string>
    <string name="movie_name">Movie Name:</string>
    <string name="rate_movie">Rate the Movie:</string>
    <string name="review_movie">Review the Movie:</string>
    <string name="movie_image">movie image</string>
    <string name="movie_rating_words">Movie Rating:</string>
    <string name="movie_review_words">Movie Review:</string>
    <string name="goto_second_screen_button">button_image_togo_to_second_screen</string>
    <string name="goto_first_screen_button">image_button_togo_to_first_screen</string>
    <string name="moviebox_words">MovieBox</string>
    <string name="select_image_words">SELECT IMAGE</string>
    <string name="movie_image_preview">movie_image_preview</string>
    <string name="submit_review_words">SUBMIT REVIEW</string>
    <string name="movie_grid_image">movie grid image</string>
</resources>