<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<!--    text view that displays app name "Movie Box" at the top of the screen-->

    <!--    text view for "Movie Name:" to be displayed where user needs to enter movie name-->

    <!--    text view for "Rate the Movie" to be displayed where user needs to enter movie rating-->

    <!--    radio group with radio buttons for rating options 1-4-->

    <TextView
        android:id="@+id/movie_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="16dp"
        android:text="@string/movie_name"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rate_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="52dp"
        android:text="@string/rate_movie"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/movie_name_edit_text" />

    <RadioGroup
        android:id="@+id/rating_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="10dp"
        android:checkedButton="@id/option_one_star"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate_movie">

        <RadioButton
            android:id="@+id/option_one_star"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/one_star"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/rate_movie" />

        <RadioButton
            android:id="@+id/option_two_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_stars"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/option_three_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three_stars"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/option_four_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_stars"
            android:textSize="20sp" />

    </RadioGroup>

<!--    text view for "Review the Movie" to be displayed where user needs to review the movie-->

    <!--    TextInputEditText for user to enter movie name-->

    <!--TextInputEditText for user to enter movie review-->

    <!--   button so user can select movie image from their phone -->

    <!--    imageView so the image user selected can be previewed-->

    <!--    button so user can submit their movie entree and move to second screen-->

    <TextView
        android:id="@+id/movie_review_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_movie"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rating_options"
        app:layout_constraintVertical_bias="0.389" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/movie_name_edit_text"
        android:layout_width="384dp"
        android:layout_height="41dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_name_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/movie_review_edit_text"
        android:layout_width="375dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_review_text" />

    <Button
        android:id="@+id/select_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/select_image_words"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_review_edit_text" />

    <!--    button so user can not enter a movie, but still move to second screen -->

    <ImageView
        android:id="@+id/preview_image"
        android:layout_width="197dp"
        android:layout_height="147dp"
        android:layout_below="@id/select_image"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/movie_image_preview"
        app:layout_constraintBottom_toTopOf="@id/movie_list_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_image"
        app:layout_constraintVertical_bias="0.562" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="4dp"
        android:text="@string/submit_review_words"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/preview_image" />

    <ImageButton
        android:id="@+id/movie_list_btn"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="87dp"
        android:layout_height="51dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/moviebutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/goto_second_screen_button" />


</androidx.constraintlayout.widget.ConstraintLayout>